--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name ="erro_cadastro_email_usado_Toast">Erro ao cadastrar usuário: Já existe uma conta com esse e-mail.</string>
     <string name ="erro_cadastro_campos_obrigatorios_Toast">Erro ao cadastrar usuário: Preencha todos os campos</string>
     <string name ="erro_cadastro_senhas_diferentes_Toast">Erro ao cadastrar usuário: Os campos de senha devem ser iguais.</string>
+    <string name ="erro_cadastro_nome_usuario_Toast">Erro ao cadastrar usuário: O nome de usuário inválido.</string>
     <string name ="sucesso_login_Toast">Sucesso ao fazer login!</string>
     <string name ="sucesso_cadastro_Toast">Sucesso ao cadastrar usuário</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
