--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,11 @@
     <string name="error_field_required">This field is required</string>
     <string name ="erro_login_invalido_Toast">Erro ao fazer login!</string>
     <string name ="erro_cadastro_email_invalido_Toast">Erro ao cadastrar usuário: Email indicado não é válido.</string>
-    <string name ="erro_cadastro_senha_invalida_Toast">Erro ao cadastrar usuário: Escolha uma senha que contenha, letras e números.</string>
+    <string name ="erro_cadastro_senha_invalida_Toast">Erro ao cadastrar usuário: Escolha uma senha que contenha pelo menos 6 caracteres.</string>
     <string name ="erro_cadastro_email_usado_Toast">Erro ao cadastrar usuário: Já existe uma conta com esse e-mail.</string>
     <string name ="erro_cadastro_campos_obrigatorios_Toast">Erro ao cadastrar usuário: Preencha todos os campos</string>
     <string name ="erro_cadastro_senhas_diferentes_Toast">Erro ao cadastrar usuário: Os campos de senha devem ser iguais.</string>
+    <string name ="erro_cadastro_sem_conexao">Erro ao cadastrar usuário: Verifique a sua conexão</string>
     <string name ="erro_cadastro_nome_usuario_Toast">Erro ao cadastrar usuário: O nome de usuário inválido.</string>
     <string name ="sucesso_login_Toast">Sucesso ao fazer login!</string>
     <string name ="sucesso_cadastro_Toast">Sucesso ao cadastrar usuário</string>
