--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Pet Em Foco</string>
     <string name="title_cadastro_usuario">Cadastro de Usuário</string>
     <string name="entrar">Entrar</string>
-    <string name="cadastrar">Cadastrar</string>
+    <string name="cadastrar_novo_usuario">Cadastrar</string>
+    <string name="cadastrar_endereco">Continuar o Cadastro</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Senha</string>
@@ -12,20 +13,18 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-    <string name ="erro_login_invalido_Toast">Erro ao fazer login!</string>
-    <string name ="erro_cadastro_email_invalido_Toast">Erro ao cadastrar usuário: Email indicado não é válido.</string>
-    <string name ="erro_cadastro_senha_invalida_Toast">Erro ao cadastrar usuário: Escolha uma senha que contenha pelo menos 6 caracteres.</string>
-    <string name ="erro_cadastro_email_usado_Toast">Erro ao cadastrar usuário: Já existe uma conta com esse e-mail.</string>
-    <string name ="erro_cadastro_campos_obrigatorios_Toast">Erro ao cadastrar usuário: Preencha todos os campos</string>
-    <string name ="erro_cadastro_endereco_campos_obrigatorios_Toast">Erro ao cadastrar endereço: Preencha todos os campos</string>
-    <string name ="erro_cadastro_senhas_diferentes_Toast">Erro ao cadastrar usuário: Os campos de senha devem ser iguais.</string>
-    <string name ="erro_cadastro_sem_conexao">Erro ao cadastrar usuário: Verifique a sua conexão</string>
-    <string name ="erro_cadastro_nome_usuario_Toast">Erro ao cadastrar usuário: O nome de usuário inválido.</string>
-    <string name ="sucesso_login_Toast">Sucesso ao fazer login!</string>
-    <string name ="sucesso_cadastro_Toast">Sucesso ao cadastrar usuário</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <string name="erro_login_invalido_Toast">Erro ao fazer login!</string>
+    <string name="erro_cadastro_email_invalido_Toast">Erro ao cadastrar usuário: Email indicado não é válido.</string>
+    <string name="erro_cadastro_senha_invalida_Toast">Erro ao cadastrar usuário: Escolha uma senha que contenha pelo menos 6 caracteres.</string>
+    <string name="erro_cadastro_email_usado_Toast">Erro ao cadastrar usuário: Já existe uma conta com esse e-mail.</string>
+    <string name="erro_cadastro_campos_obrigatorios_Toast">Erro ao cadastrar usuário: Preencha todos os campos</string>
+    <string name="erro_cadastro_endereco_campos_obrigatorios_Toast">Erro ao cadastrar endereço: Preencha todos os campos</string>
+    <string name="erro_cadastro_senhas_diferentes_Toast">Erro ao cadastrar usuário: Os campos de senha devem ser iguais.</string>
+    <string name="erro_cadastro_sem_conexao">Erro ao cadastrar usuário: Verifique a sua conexão</string>
+    <string name="erro_cadastro_nome_usuario_Toast">Erro ao cadastrar usuário: O nome de usuário inválido.</string>
+    <string name="sucesso_login_Toast">Sucesso ao fazer login!</string>
+    <string name="sucesso_cadastro_Toast">Sucesso ao cadastrar usuário</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
     <string name="pergunta_nao_possui_cadastro">Não possui cadastro?</string>
     <string name="digite_seu_nome">Digite seu nome</string>
     <string name="digite_seu_email">Digite seu email</string>
@@ -33,6 +32,7 @@
     <string name="repita_sua_senha">Repita sua senha</string>
     <string name="nome">Nome</string>
     <string name="confirmar_sua_senha">Confirme sua senha</string>
+    <!-- Strings related to Cadastro de Endereço -->
     <string name="endereco_logradouro">Logradouro</string>
     <string name="digite_seu_logradouro">Digite seu logradouro</string>
     <string name="endereco_numero">Número</string>
@@ -47,6 +47,7 @@
     <string name="digite_seu_cep">Digite seu CEP</string>
     <string name="endereco_uf">Estado</string>
     <string name="escolha_sua_uf">Escolha seu estado</string>
+    <string name="finalizar_cadastro">Finalizar Cadastro</string>
 
 
 </resources>
