Implementação do cadastro de Endereço (https://www.pivotaltracker.com/story/show/152260828/comments/183176363) Renomeação do UF para a abreviação, mudança na mensangem de transição da tela de cadastro usuário para a de endereço, somente teclado númerico para o CEP.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="erro_cadastro_nome_usuario_Toast">Erro ao cadastrar usuário: O nome de usuário inválido.</string>
     <string name="sucesso_login_Toast">Sucesso ao fazer login!</string>
     <string name="sucesso_cadastro_Toast">Sucesso ao cadastrar usuário</string>
+    <string name="sucesso_cadastro_proxima_etapa_Toast">Sucesso! Pronto para a próxima etapa</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
     <string name="pergunta_nao_possui_cadastro">Não possui cadastro?</string>
     <string name="digite_seu_nome">Digite seu nome</string>
