--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="pergunta_confirma_dados_serao_perdidos">Os dados não salvos serão perdidos. Confirma?</string>
 
     <!--Strings relacionadas a cadastro de fornecedor-->
+    <string name="tb_cadastro_fornecedor">Cadastro de Fornecedor</string>
     <string name="botao_cadastrar_fornecedor">Cadastrar Fornecedor</string>
     <string name="sucesso_cadastro_Fornecedor">Sucesso ao cadastrar fornecedor</string>
     <string name="digite_seu_telefone">Digite seu telefone</string>
