--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,6 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="buscas">Buscas</string>
+    <string name="buscaEstabelecimento">Nome estabelecimento</string>
 
 </resources>
