--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,9 +87,16 @@
     <string name="pergunta_confirma_remocao_pet">O pet será removido. Confirma?</string>
 
     <!--Strings relacionadas ao estbelecimento-->
-    <string name="tb_acesso_estabelecimento">Informações do Estabelecimentos</string>
-    <string name="tela_exibir_informacoes_estabelecimento_voltar">Voltar</string>
-    <string name="exibir_servicos_estabelecimento">Exibir Serviços</string>
+    <string name="tb_acesso_estabelecimento">Informações</string>
+    <string name="servicos">Serviços:</string>
+    <string name="estabelecimento">Estabelecimento:</string>
+    <string name="telefone">Telefone:</string>
+    <string name="cpf_cnpj">CPF/CNPJ:</string>
+    <string name="horario">Horário:</string>
+    <string name="email">Email:</string>
+    <string name="avaliacoes">Avaliações</string>
+    <string name="sucesso_avaliacao_estabelecimento">avaliacao realizada com sucesso</string>
+    <string name="erro_avaliacao_estabelecimento">erro ao realizar avaliação</string>
 
     <!--Strings relacionadas a tela de busca-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -98,5 +105,11 @@
     <string name="action_settings">Settings</string>
 
     <string name="buscaEstabelecimento">Nome estabelecimento</string>
+
+    <!--Strings relacionadas a avaliação-->
+    <string name="tb_avaliar_estabelecimento">Avaliação</string>
+    <string name="avaliador">Usuário</string>
+    <string name="comentario">Comentário</string>
+    <string name="avaliar">Avaliar</string>
 
 </resources>
