Implementado a atualização da nota do etabelecimento e a exibição da nota quando esse é pesquisado
Merge branch 'master' of https://github.com/dariofrazao/projetopetemfoco into alexsandro
# Conflicts:
#	app/src/main/AndroidManifest.xml
#	app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,6 +119,8 @@
     <string name="email">Email:</string>
     <string name="avaliacoes">Avaliações</string>
     <string name="sucesso_avaliacao_estabelecimento">avaliacao realizada com sucesso</string>
+    <string name="sucesso_atualizacao_nota">Busca realizada com sucesso!</string>
+    <string name="erro_atualizacao_nota">Busca realizada com problema!</string>
     <string name="erro_avaliacao_estabelecimento">erro ao realizar avaliação</string>
 
     <!--Strings relacionadas a tela de busca-->
