modificaçõe no layout de busca servico e raio salva em preferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,8 +122,8 @@
     <!--Strings relacionadas a tela de busca-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="estabelecimento_nao_encontrado">Estabelecimento não encontrado</string>
-    <string name="servicos_nao_encontrado">Não foram encontrados resultados para sua busca</string>
+    <string name="estabelecimento_nao_encontrado">Estabelecimento não encontrado.Tente ampliar o raio de busca</string>
+    <string name="servicos_nao_encontrado">Não foram encontrados serviços próximos a você.Tente ampliar o raio de busca</string>
 
     <string name="action_settings">Settings</string>
 
