--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,6 +123,11 @@
     <string name="facebook_app_id">1383454871782340</string>
     <string name="fb_login_protocol_scheme">fb1383454871782340</string>
 
+    <!--Strings relacionadas aos favoritos-->
+    <string name="tb_meus_favoritos">Meus Favoritos</string>
+    <string name="favoritado">Estalecimento adicionado aos favoritos!</string>
+    <string name="desfavoritado">Estalecimento removido dos favoritos!:</string>
+
     <!--Strings relacionadas ao estabelecimento-->
     <string name="tb_acesso_estabelecimento">Informações</string>
     <string name="servicos">Serviços:</string>
